// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateInput renders correctly currentLocale 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 100%;
}

.emotion-0 div.react-datepicker-wrapper {
  display: block;
}

.emotion-0 div.react-datepicker__input-container {
  display: block;
}

.emotion-0 div.react-datepicker__triangle {
  display: none;
}

.emotion-0 div.react-datepicker__month-container {
  padding: 16px;
}

.emotion-0 .react-datepicker-popper {
  z-index: 1000;
}

.emotion-0 .calendar {
  font-family: 'Asap';
  border-color: #dce1eb;
}

.emotion-0 .calendar .react-datepicker__header {
  color: #4a4f62;
  background-color: #fff;
  border-bottom: none;
  text-align: inherit;
  display: block;
  padding-top: 0;
  position: inherit;
}

.emotion-0 .calendar .react-datepicker__triangle {
  border-bottom-color: #fff;
}

.emotion-0 .calendar .react-datepicker__month {
  margin: 0;
}

.emotion-0 .calendar .react-datepicker__day-names {
  margin-top: 8px;
}

.emotion-0 .calendar .react-datepicker__day-name {
  font-family: 'Asap';
  color: #4a4f62;
  font-weight: 500;
  font-size: 14px;
  line-height: 24px;
  text-align: center;
  margin: 3px;
}

.emotion-0 .calendar .react-datepicker__day {
  color: #b2b6c3;
  font-size: 16px;
  width: 1.7rem;
  height: 1.7rem;
  margin-left: 3px;
  margin-right: 3px;
}

.emotion-0 .calendar .react-datepicker__day--selected {
  color: #eeeeff;
  background-color: #4f0599;
  border-radius: 50%;
}

.emotion-0 .calendar .react-datepicker__day--keyboard-selected {
  color: #4f0599;
  background-color: #eeeeff;
  border-radius: 50%;
}

.emotion-0 .calendar .react-datepicker__day:hover {
  color: #4f0599;
  border-radius: 50%;
  background-color: #eeeeff;
}

.emotion-0 .calendar .react-datepicker__day--disabled {
  color: #eeeeff;
}

.emotion-0 .calendar .react-datepicker__day--disabled:hover {
  color: #eeeeff;
  background-color: transparent;
}

.emotion-3.emotion-3 {
  position: relative;
}

.emotion-4 {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
}

.emotion-4::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-4::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-4:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-4::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-4:hover,
.emotion-4:focus {
  border-color: #dbdbdf;
}

.emotion-4:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.emotion-6 {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
}

.emotion-8 {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.emotion-8.emotion-8 {
  overflow: hidden;
}

.emotion-9.emotion-9 {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

.emotion-10.emotion-10 {
  height: 48px;
  padding: 8px;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  right: 0;
  top: 0;
}

.emotion-12 {
  margin: 0;
  border: 0;
  width: 1px;
  height: auto;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #eeeeff;
}

.emotion-12.emotion-12 {
  height: 100%;
  margin-right: 8px;
  margin-left: 8px;
}

.emotion-14 {
  fill: gray;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.emotion-14.emotion-14 {
  vertical-align: middle;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      class="react-datepicker-wrapper"
    >
      <div
        class="react-datepicker__input-container"
      >
        <div
          class=""
          value=""
        >
          <div
            class="emotion-2"
          >
            <div
              class="emotion-3"
            >
              <input
                autocomplete="on"
                class="emotion-4 emotion-5"
                type="text"
                value=""
              />
              <label
                aria-live="assertive"
                class="emotion-6 emotion-7"
              >
                Date
              </label>
            </div>
            <div
              class="emotion-8"
            >
              <div
                class="emotion-9"
              />
            </div>
          </div>
          <div
            class="emotion-10"
          >
            <hr
              class="emotion-11 emotion-12"
            />
            <svg
              class="sc-ui-icon emotion-13 emotion-14"
              viewBox="0 0 24 24"
            >
              <path
                d="M9,10H7V12H9V10M13,10H11V12H13V10M17,10H15V12H17V10M19,3H18V1H16V3H8V1H6V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5A2,2 0 0,0 19,3M19,19H5V8H19V19Z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DateInput renders correctly disabled 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 100%;
}

.emotion-0 div.react-datepicker-wrapper {
  display: block;
}

.emotion-0 div.react-datepicker__input-container {
  display: block;
}

.emotion-0 div.react-datepicker__triangle {
  display: none;
}

.emotion-0 div.react-datepicker__month-container {
  padding: 16px;
}

.emotion-0 .react-datepicker-popper {
  z-index: 1000;
}

.emotion-0 .calendar {
  font-family: 'Asap';
  border-color: #dce1eb;
}

.emotion-0 .calendar .react-datepicker__header {
  color: #4a4f62;
  background-color: #fff;
  border-bottom: none;
  text-align: inherit;
  display: block;
  padding-top: 0;
  position: inherit;
}

.emotion-0 .calendar .react-datepicker__triangle {
  border-bottom-color: #fff;
}

.emotion-0 .calendar .react-datepicker__month {
  margin: 0;
}

.emotion-0 .calendar .react-datepicker__day-names {
  margin-top: 8px;
}

.emotion-0 .calendar .react-datepicker__day-name {
  font-family: 'Asap';
  color: #4a4f62;
  font-weight: 500;
  font-size: 14px;
  line-height: 24px;
  text-align: center;
  margin: 3px;
}

.emotion-0 .calendar .react-datepicker__day {
  color: #b2b6c3;
  font-size: 16px;
  width: 1.7rem;
  height: 1.7rem;
  margin-left: 3px;
  margin-right: 3px;
}

.emotion-0 .calendar .react-datepicker__day--selected {
  color: #eeeeff;
  background-color: #4f0599;
  border-radius: 50%;
}

.emotion-0 .calendar .react-datepicker__day--keyboard-selected {
  color: #4f0599;
  background-color: #eeeeff;
  border-radius: 50%;
}

.emotion-0 .calendar .react-datepicker__day:hover {
  color: #4f0599;
  border-radius: 50%;
  background-color: #eeeeff;
}

.emotion-0 .calendar .react-datepicker__day--disabled {
  color: #eeeeff;
}

.emotion-0 .calendar .react-datepicker__day--disabled:hover {
  color: #eeeeff;
  background-color: transparent;
}

.emotion-3.emotion-3 {
  position: relative;
}

.emotion-4 {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  cursor: default;
  pointer-events: none;
  background-color: #fafafb;
  border-color: #fafafb;
  color: #d4dae7;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
}

.emotion-4::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-4::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-4:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-4::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-4:hover,
.emotion-4:focus {
  border-color: #dbdbdf;
}

.emotion-4:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.emotion-6 {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
  color: #d4dae7;
}

.emotion-8 {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.emotion-8.emotion-8 {
  overflow: hidden;
}

.emotion-9.emotion-9 {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

.emotion-10.emotion-10 {
  height: 48px;
  padding: 8px;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  right: 0;
  top: 0;
}

.emotion-12 {
  margin: 0;
  border: 0;
  width: 1px;
  height: auto;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #eeeeff;
}

.emotion-12.emotion-12 {
  height: 100%;
  margin-right: 8px;
  margin-left: 8px;
}

.emotion-14 {
  fill: gray;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.emotion-14.emotion-14 {
  vertical-align: middle;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      class="react-datepicker-wrapper"
    >
      <div
        class="react-datepicker__input-container"
      >
        <div
          class=""
          disabled=""
          value=""
        >
          <div
            class="emotion-2"
          >
            <div
              class="emotion-3"
            >
              <input
                autocomplete="on"
                class="emotion-4 emotion-5"
                disabled=""
                type="text"
                value=""
              />
              <label
                aria-live="assertive"
                class="emotion-6 emotion-7"
                disabled=""
              >
                Date
              </label>
            </div>
            <div
              class="emotion-8"
            >
              <div
                class="emotion-9"
              />
            </div>
          </div>
          <div
            class="emotion-10"
          >
            <hr
              class="emotion-11 emotion-12"
            />
            <svg
              class="sc-ui-icon emotion-13 emotion-14"
              viewBox="0 0 24 24"
            >
              <path
                d="M9,10H7V12H9V10M13,10H11V12H13V10M17,10H15V12H17V10M19,3H18V1H16V3H8V1H6V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5A2,2 0 0,0 19,3M19,19H5V8H19V19Z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DateInput renders correctly error 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 100%;
}

.emotion-0 div.react-datepicker-wrapper {
  display: block;
}

.emotion-0 div.react-datepicker__input-container {
  display: block;
}

.emotion-0 div.react-datepicker__triangle {
  display: none;
}

.emotion-0 div.react-datepicker__month-container {
  padding: 16px;
}

.emotion-0 .react-datepicker-popper {
  z-index: 1000;
}

.emotion-0 .calendar {
  font-family: 'Asap';
  border-color: #dce1eb;
}

.emotion-0 .calendar .react-datepicker__header {
  color: #4a4f62;
  background-color: #fff;
  border-bottom: none;
  text-align: inherit;
  display: block;
  padding-top: 0;
  position: inherit;
}

.emotion-0 .calendar .react-datepicker__triangle {
  border-bottom-color: #fff;
}

.emotion-0 .calendar .react-datepicker__month {
  margin: 0;
}

.emotion-0 .calendar .react-datepicker__day-names {
  margin-top: 8px;
}

.emotion-0 .calendar .react-datepicker__day-name {
  font-family: 'Asap';
  color: #4a4f62;
  font-weight: 500;
  font-size: 14px;
  line-height: 24px;
  text-align: center;
  margin: 3px;
}

.emotion-0 .calendar .react-datepicker__day {
  color: #b2b6c3;
  font-size: 16px;
  width: 1.7rem;
  height: 1.7rem;
  margin-left: 3px;
  margin-right: 3px;
}

.emotion-0 .calendar .react-datepicker__day--selected {
  color: #eeeeff;
  background-color: #4f0599;
  border-radius: 50%;
}

.emotion-0 .calendar .react-datepicker__day--keyboard-selected {
  color: #4f0599;
  background-color: #eeeeff;
  border-radius: 50%;
}

.emotion-0 .calendar .react-datepicker__day:hover {
  color: #4f0599;
  border-radius: 50%;
  background-color: #eeeeff;
}

.emotion-0 .calendar .react-datepicker__day--disabled {
  color: #eeeeff;
}

.emotion-0 .calendar .react-datepicker__day--disabled:hover {
  color: #eeeeff;
  background-color: transparent;
}

.emotion-3.emotion-3 {
  position: relative;
}

.emotion-4 {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  border-color: #ef5774;
}

.emotion-4::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-4::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-4:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-4::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-4:hover,
.emotion-4:focus {
  border-color: #dbdbdf;
}

.emotion-4:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.emotion-4::-webkit-input-placeholder {
  opacity: 1;
}

.emotion-4::-moz-placeholder {
  opacity: 1;
}

.emotion-4:-ms-input-placeholder {
  opacity: 1;
}

.emotion-4::placeholder {
  opacity: 1;
}

.emotion-4:hover,
.emotion-4:focus {
  border-color: #ef5774;
}

.emotion-4:focus {
  box-shadow: 0 0 0 2px rgba(239,87,116,0.25);
  border-color: #ef5774;
}

.emotion-6 {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
  -webkit-transform: translate(-9.6%, -3px) scale(0.8);
  -moz-transform: translate(-9.6%, -3px) scale(0.8);
  -ms-transform: translate(-9.6%, -3px) scale(0.8);
  transform: translate(-9.6%, -3px) scale(0.8);
  color: #ef5774;
}

.emotion-8 {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
  -webkit-transition: max-height 300ms ease-in,opacity 300ms ease-in;
  transition: max-height 300ms ease-in,opacity 300ms ease-in;
  max-height: 56px;
  opacity: 1;
  overflow: visible;
}

.emotion-8.emotion-8 {
  overflow: hidden;
}

.emotion-9.emotion-9 {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

.emotion-10.emotion-10 {
  height: 48px;
  padding: 8px;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  right: 0;
  top: 0;
}

.emotion-12 {
  margin: 0;
  border: 0;
  width: 1px;
  height: auto;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #eeeeff;
}

.emotion-12.emotion-12 {
  height: 100%;
  margin-right: 8px;
  margin-left: 8px;
}

.emotion-14 {
  fill: #ef5774;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.emotion-14.emotion-14 {
  vertical-align: middle;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      class="react-datepicker-wrapper"
    >
      <div
        class="react-datepicker__input-container"
      >
        <div
          class=""
          value=""
        >
          <div
            class="emotion-2"
          >
            <div
              class="emotion-3"
            >
              <input
                autocomplete="on"
                class="emotion-4 emotion-5"
                type="text"
                value=""
              />
              <label
                aria-live="assertive"
                class="emotion-6 emotion-7"
              >
                Date
              </label>
            </div>
            <div
              class="emotion-8"
            >
              <div
                class="emotion-9"
              >
                true
              </div>
            </div>
          </div>
          <div
            class="emotion-10"
          >
            <hr
              class="emotion-11 emotion-12"
            />
            <svg
              class="sc-ui-icon emotion-13 emotion-14"
              viewBox="0 0 24 24"
            >
              <path
                d="M9,10H7V12H9V10M13,10H11V12H13V10M17,10H15V12H17V10M19,3H18V1H16V3H8V1H6V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5A2,2 0 0,0 19,3M19,19H5V8H19V19Z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DateInput renders correctly error disabled 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 100%;
}

.emotion-0 div.react-datepicker-wrapper {
  display: block;
}

.emotion-0 div.react-datepicker__input-container {
  display: block;
}

.emotion-0 div.react-datepicker__triangle {
  display: none;
}

.emotion-0 div.react-datepicker__month-container {
  padding: 16px;
}

.emotion-0 .react-datepicker-popper {
  z-index: 1000;
}

.emotion-0 .calendar {
  font-family: 'Asap';
  border-color: #dce1eb;
}

.emotion-0 .calendar .react-datepicker__header {
  color: #4a4f62;
  background-color: #fff;
  border-bottom: none;
  text-align: inherit;
  display: block;
  padding-top: 0;
  position: inherit;
}

.emotion-0 .calendar .react-datepicker__triangle {
  border-bottom-color: #fff;
}

.emotion-0 .calendar .react-datepicker__month {
  margin: 0;
}

.emotion-0 .calendar .react-datepicker__day-names {
  margin-top: 8px;
}

.emotion-0 .calendar .react-datepicker__day-name {
  font-family: 'Asap';
  color: #4a4f62;
  font-weight: 500;
  font-size: 14px;
  line-height: 24px;
  text-align: center;
  margin: 3px;
}

.emotion-0 .calendar .react-datepicker__day {
  color: #b2b6c3;
  font-size: 16px;
  width: 1.7rem;
  height: 1.7rem;
  margin-left: 3px;
  margin-right: 3px;
}

.emotion-0 .calendar .react-datepicker__day--selected {
  color: #eeeeff;
  background-color: #4f0599;
  border-radius: 50%;
}

.emotion-0 .calendar .react-datepicker__day--keyboard-selected {
  color: #4f0599;
  background-color: #eeeeff;
  border-radius: 50%;
}

.emotion-0 .calendar .react-datepicker__day:hover {
  color: #4f0599;
  border-radius: 50%;
  background-color: #eeeeff;
}

.emotion-0 .calendar .react-datepicker__day--disabled {
  color: #eeeeff;
}

.emotion-0 .calendar .react-datepicker__day--disabled:hover {
  color: #eeeeff;
  background-color: transparent;
}

.emotion-3.emotion-3 {
  position: relative;
}

.emotion-4 {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  cursor: default;
  pointer-events: none;
  background-color: #fafafb;
  border-color: #fafafb;
  color: #d4dae7;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  border-color: #ef5774;
}

.emotion-4::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-4::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-4:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-4::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-4:hover,
.emotion-4:focus {
  border-color: #dbdbdf;
}

.emotion-4:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.emotion-4::-webkit-input-placeholder {
  opacity: 1;
}

.emotion-4::-moz-placeholder {
  opacity: 1;
}

.emotion-4:-ms-input-placeholder {
  opacity: 1;
}

.emotion-4::placeholder {
  opacity: 1;
}

.emotion-4:hover,
.emotion-4:focus {
  border-color: #ef5774;
}

.emotion-4:focus {
  box-shadow: 0 0 0 2px rgba(239,87,116,0.25);
  border-color: #ef5774;
}

.emotion-6 {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
  -webkit-transform: translate(-9.6%, -3px) scale(0.8);
  -moz-transform: translate(-9.6%, -3px) scale(0.8);
  -ms-transform: translate(-9.6%, -3px) scale(0.8);
  transform: translate(-9.6%, -3px) scale(0.8);
  color: #d4dae7;
  color: #ef5774;
}

.emotion-8 {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
  -webkit-transition: max-height 300ms ease-in,opacity 300ms ease-in;
  transition: max-height 300ms ease-in,opacity 300ms ease-in;
  max-height: 56px;
  opacity: 1;
  overflow: visible;
}

.emotion-8.emotion-8 {
  overflow: hidden;
}

.emotion-9.emotion-9 {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

.emotion-10.emotion-10 {
  height: 48px;
  padding: 8px;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  right: 0;
  top: 0;
}

.emotion-12 {
  margin: 0;
  border: 0;
  width: 1px;
  height: auto;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #eeeeff;
}

.emotion-12.emotion-12 {
  height: 100%;
  margin-right: 8px;
  margin-left: 8px;
}

.emotion-14 {
  fill: #ef5774;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.emotion-14.emotion-14 {
  vertical-align: middle;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      class="react-datepicker-wrapper"
    >
      <div
        class="react-datepicker__input-container"
      >
        <div
          class=""
          disabled=""
          value=""
        >
          <div
            class="emotion-2"
          >
            <div
              class="emotion-3"
            >
              <input
                autocomplete="on"
                class="emotion-4 emotion-5"
                disabled=""
                type="text"
                value=""
              />
              <label
                aria-live="assertive"
                class="emotion-6 emotion-7"
                disabled=""
              >
                Date
              </label>
            </div>
            <div
              class="emotion-8"
            >
              <div
                class="emotion-9"
              >
                true
              </div>
            </div>
          </div>
          <div
            class="emotion-10"
          >
            <hr
              class="emotion-11 emotion-12"
            />
            <svg
              class="sc-ui-icon emotion-13 emotion-14"
              viewBox="0 0 24 24"
            >
              <path
                d="M9,10H7V12H9V10M13,10H11V12H13V10M17,10H15V12H17V10M19,3H18V1H16V3H8V1H6V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5A2,2 0 0,0 19,3M19,19H5V8H19V19Z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DateInput renders correctly error disabled required 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 100%;
}

.emotion-0 div.react-datepicker-wrapper {
  display: block;
}

.emotion-0 div.react-datepicker__input-container {
  display: block;
}

.emotion-0 div.react-datepicker__triangle {
  display: none;
}

.emotion-0 div.react-datepicker__month-container {
  padding: 16px;
}

.emotion-0 .react-datepicker-popper {
  z-index: 1000;
}

.emotion-0 .calendar {
  font-family: 'Asap';
  border-color: #dce1eb;
}

.emotion-0 .calendar .react-datepicker__header {
  color: #4a4f62;
  background-color: #fff;
  border-bottom: none;
  text-align: inherit;
  display: block;
  padding-top: 0;
  position: inherit;
}

.emotion-0 .calendar .react-datepicker__triangle {
  border-bottom-color: #fff;
}

.emotion-0 .calendar .react-datepicker__month {
  margin: 0;
}

.emotion-0 .calendar .react-datepicker__day-names {
  margin-top: 8px;
}

.emotion-0 .calendar .react-datepicker__day-name {
  font-family: 'Asap';
  color: #4a4f62;
  font-weight: 500;
  font-size: 14px;
  line-height: 24px;
  text-align: center;
  margin: 3px;
}

.emotion-0 .calendar .react-datepicker__day {
  color: #b2b6c3;
  font-size: 16px;
  width: 1.7rem;
  height: 1.7rem;
  margin-left: 3px;
  margin-right: 3px;
}

.emotion-0 .calendar .react-datepicker__day--selected {
  color: #eeeeff;
  background-color: #4f0599;
  border-radius: 50%;
}

.emotion-0 .calendar .react-datepicker__day--keyboard-selected {
  color: #4f0599;
  background-color: #eeeeff;
  border-radius: 50%;
}

.emotion-0 .calendar .react-datepicker__day:hover {
  color: #4f0599;
  border-radius: 50%;
  background-color: #eeeeff;
}

.emotion-0 .calendar .react-datepicker__day--disabled {
  color: #eeeeff;
}

.emotion-0 .calendar .react-datepicker__day--disabled:hover {
  color: #eeeeff;
  background-color: transparent;
}

.emotion-3.emotion-3 {
  position: relative;
}

.emotion-4 {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  cursor: default;
  pointer-events: none;
  background-color: #fafafb;
  border-color: #fafafb;
  color: #d4dae7;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  border-color: #ef5774;
}

.emotion-4::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-4::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-4:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-4::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-4:hover,
.emotion-4:focus {
  border-color: #dbdbdf;
}

.emotion-4:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.emotion-4::-webkit-input-placeholder {
  opacity: 1;
}

.emotion-4::-moz-placeholder {
  opacity: 1;
}

.emotion-4:-ms-input-placeholder {
  opacity: 1;
}

.emotion-4::placeholder {
  opacity: 1;
}

.emotion-4:hover,
.emotion-4:focus {
  border-color: #ef5774;
}

.emotion-4:focus {
  box-shadow: 0 0 0 2px rgba(239,87,116,0.25);
  border-color: #ef5774;
}

.emotion-6 {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
  -webkit-transform: translate(-9.6%, -3px) scale(0.8);
  -moz-transform: translate(-9.6%, -3px) scale(0.8);
  -ms-transform: translate(-9.6%, -3px) scale(0.8);
  transform: translate(-9.6%, -3px) scale(0.8);
  color: #d4dae7;
  color: #ef5774;
}

.emotion-8 {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
  -webkit-transition: max-height 300ms ease-in,opacity 300ms ease-in;
  transition: max-height 300ms ease-in,opacity 300ms ease-in;
  max-height: 56px;
  opacity: 1;
  overflow: visible;
}

.emotion-8.emotion-8 {
  overflow: hidden;
}

.emotion-9.emotion-9 {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

.emotion-10.emotion-10 {
  height: 48px;
  padding: 8px;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  right: 0;
  top: 0;
}

.emotion-12 {
  fill: #ef5774;
  height: 8px;
  width: 8px;
  min-width: 8px;
  min-height: 8px;
}

.emotion-12.emotion-12 {
  vertical-align: middle;
}

.emotion-14 {
  margin: 0;
  border: 0;
  width: 1px;
  height: auto;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #eeeeff;
}

.emotion-14.emotion-14 {
  height: 100%;
  margin-right: 8px;
  margin-left: 8px;
}

.emotion-16 {
  fill: #ef5774;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.emotion-16.emotion-16 {
  vertical-align: middle;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      class="react-datepicker-wrapper"
    >
      <div
        class="react-datepicker__input-container"
      >
        <div
          class=""
          disabled=""
          value=""
        >
          <div
            class="emotion-2"
          >
            <div
              class="emotion-3"
            >
              <input
                autocomplete="on"
                class="emotion-4 emotion-5"
                disabled=""
                type="text"
                value=""
              />
              <label
                aria-live="assertive"
                class="emotion-6 emotion-7"
                disabled=""
              >
                Date
              </label>
            </div>
            <div
              class="emotion-8"
            >
              <div
                class="emotion-9"
              >
                true
              </div>
            </div>
          </div>
          <div
            class="emotion-10"
          >
            <svg
              class="sc-ui-icon emotion-11 emotion-12"
              viewBox="0 0 24 24"
            >
              <path
                d="M10,2H14L13.21,9.91L19.66,5.27L21.66,8.73L14.42,12L21.66,15.27L19.66,18.73L13.21,14.09L14,22H10L10.79,14.09L4.34,18.73L2.34,15.27L9.58,12L2.34,8.73L4.34,5.27L10.79,9.91L10,2Z"
              />
            </svg>
            <hr
              class="emotion-13 emotion-14"
            />
            <svg
              class="sc-ui-icon emotion-11 emotion-16"
              viewBox="0 0 24 24"
            >
              <path
                d="M9,10H7V12H9V10M13,10H11V12H13V10M17,10H15V12H17V10M19,3H18V1H16V3H8V1H6V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5A2,2 0 0,0 19,3M19,19H5V8H19V19Z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DateInput renders correctly min-max 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 100%;
}

.emotion-0 div.react-datepicker-wrapper {
  display: block;
}

.emotion-0 div.react-datepicker__input-container {
  display: block;
}

.emotion-0 div.react-datepicker__triangle {
  display: none;
}

.emotion-0 div.react-datepicker__month-container {
  padding: 16px;
}

.emotion-0 .react-datepicker-popper {
  z-index: 1000;
}

.emotion-0 .calendar {
  font-family: 'Asap';
  border-color: #dce1eb;
}

.emotion-0 .calendar .react-datepicker__header {
  color: #4a4f62;
  background-color: #fff;
  border-bottom: none;
  text-align: inherit;
  display: block;
  padding-top: 0;
  position: inherit;
}

.emotion-0 .calendar .react-datepicker__triangle {
  border-bottom-color: #fff;
}

.emotion-0 .calendar .react-datepicker__month {
  margin: 0;
}

.emotion-0 .calendar .react-datepicker__day-names {
  margin-top: 8px;
}

.emotion-0 .calendar .react-datepicker__day-name {
  font-family: 'Asap';
  color: #4a4f62;
  font-weight: 500;
  font-size: 14px;
  line-height: 24px;
  text-align: center;
  margin: 3px;
}

.emotion-0 .calendar .react-datepicker__day {
  color: #b2b6c3;
  font-size: 16px;
  width: 1.7rem;
  height: 1.7rem;
  margin-left: 3px;
  margin-right: 3px;
}

.emotion-0 .calendar .react-datepicker__day--selected {
  color: #eeeeff;
  background-color: #4f0599;
  border-radius: 50%;
}

.emotion-0 .calendar .react-datepicker__day--keyboard-selected {
  color: #4f0599;
  background-color: #eeeeff;
  border-radius: 50%;
}

.emotion-0 .calendar .react-datepicker__day:hover {
  color: #4f0599;
  border-radius: 50%;
  background-color: #eeeeff;
}

.emotion-0 .calendar .react-datepicker__day--disabled {
  color: #eeeeff;
}

.emotion-0 .calendar .react-datepicker__day--disabled:hover {
  color: #eeeeff;
  background-color: transparent;
}

.emotion-3.emotion-3 {
  position: relative;
}

.emotion-4 {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
}

.emotion-4::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-4::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-4:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-4::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-4:hover,
.emotion-4:focus {
  border-color: #dbdbdf;
}

.emotion-4:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.emotion-6 {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
}

.emotion-8 {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.emotion-8.emotion-8 {
  overflow: hidden;
}

.emotion-9.emotion-9 {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

.emotion-10.emotion-10 {
  height: 48px;
  padding: 8px;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  right: 0;
  top: 0;
}

.emotion-12 {
  margin: 0;
  border: 0;
  width: 1px;
  height: auto;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #eeeeff;
}

.emotion-12.emotion-12 {
  height: 100%;
  margin-right: 8px;
  margin-left: 8px;
}

.emotion-14 {
  fill: gray;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.emotion-14.emotion-14 {
  vertical-align: middle;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      class="react-datepicker-wrapper"
    >
      <div
        class="react-datepicker__input-container"
      >
        <div
          class=""
          value=""
        >
          <div
            class="emotion-2"
          >
            <div
              class="emotion-3"
            >
              <input
                autocomplete="on"
                class="emotion-4 emotion-5"
                type="text"
                value=""
              />
              <label
                aria-live="assertive"
                class="emotion-6 emotion-7"
              >
                Date
              </label>
            </div>
            <div
              class="emotion-8"
            >
              <div
                class="emotion-9"
              />
            </div>
          </div>
          <div
            class="emotion-10"
          >
            <hr
              class="emotion-11 emotion-12"
            />
            <svg
              class="sc-ui-icon emotion-13 emotion-14"
              viewBox="0 0 24 24"
            >
              <path
                d="M9,10H7V12H9V10M13,10H11V12H13V10M17,10H15V12H17V10M19,3H18V1H16V3H8V1H6V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5A2,2 0 0,0 19,3M19,19H5V8H19V19Z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DateInput renders correctly required 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 100%;
}

.emotion-0 div.react-datepicker-wrapper {
  display: block;
}

.emotion-0 div.react-datepicker__input-container {
  display: block;
}

.emotion-0 div.react-datepicker__triangle {
  display: none;
}

.emotion-0 div.react-datepicker__month-container {
  padding: 16px;
}

.emotion-0 .react-datepicker-popper {
  z-index: 1000;
}

.emotion-0 .calendar {
  font-family: 'Asap';
  border-color: #dce1eb;
}

.emotion-0 .calendar .react-datepicker__header {
  color: #4a4f62;
  background-color: #fff;
  border-bottom: none;
  text-align: inherit;
  display: block;
  padding-top: 0;
  position: inherit;
}

.emotion-0 .calendar .react-datepicker__triangle {
  border-bottom-color: #fff;
}

.emotion-0 .calendar .react-datepicker__month {
  margin: 0;
}

.emotion-0 .calendar .react-datepicker__day-names {
  margin-top: 8px;
}

.emotion-0 .calendar .react-datepicker__day-name {
  font-family: 'Asap';
  color: #4a4f62;
  font-weight: 500;
  font-size: 14px;
  line-height: 24px;
  text-align: center;
  margin: 3px;
}

.emotion-0 .calendar .react-datepicker__day {
  color: #b2b6c3;
  font-size: 16px;
  width: 1.7rem;
  height: 1.7rem;
  margin-left: 3px;
  margin-right: 3px;
}

.emotion-0 .calendar .react-datepicker__day--selected {
  color: #eeeeff;
  background-color: #4f0599;
  border-radius: 50%;
}

.emotion-0 .calendar .react-datepicker__day--keyboard-selected {
  color: #4f0599;
  background-color: #eeeeff;
  border-radius: 50%;
}

.emotion-0 .calendar .react-datepicker__day:hover {
  color: #4f0599;
  border-radius: 50%;
  background-color: #eeeeff;
}

.emotion-0 .calendar .react-datepicker__day--disabled {
  color: #eeeeff;
}

.emotion-0 .calendar .react-datepicker__day--disabled:hover {
  color: #eeeeff;
  background-color: transparent;
}

.emotion-3.emotion-3 {
  position: relative;
}

.emotion-4 {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
}

.emotion-4::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-4::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-4:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-4::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-4:hover,
.emotion-4:focus {
  border-color: #dbdbdf;
}

.emotion-4:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.emotion-6 {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
}

.emotion-8 {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.emotion-8.emotion-8 {
  overflow: hidden;
}

.emotion-9.emotion-9 {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

.emotion-10.emotion-10 {
  height: 48px;
  padding: 8px;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  right: 0;
  top: 0;
}

.emotion-12 {
  fill: #ef5774;
  height: 8px;
  width: 8px;
  min-width: 8px;
  min-height: 8px;
}

.emotion-12.emotion-12 {
  vertical-align: middle;
}

.emotion-14 {
  margin: 0;
  border: 0;
  width: 1px;
  height: auto;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #eeeeff;
}

.emotion-14.emotion-14 {
  height: 100%;
  margin-right: 8px;
  margin-left: 8px;
}

.emotion-16 {
  fill: gray;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.emotion-16.emotion-16 {
  vertical-align: middle;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      class="react-datepicker-wrapper"
    >
      <div
        class="react-datepicker__input-container"
      >
        <div
          class=""
          value=""
        >
          <div
            class="emotion-2"
          >
            <div
              class="emotion-3"
            >
              <input
                autocomplete="on"
                class="emotion-4 emotion-5"
                type="text"
                value=""
              />
              <label
                aria-live="assertive"
                class="emotion-6 emotion-7"
              >
                Date
              </label>
            </div>
            <div
              class="emotion-8"
            >
              <div
                class="emotion-9"
              />
            </div>
          </div>
          <div
            class="emotion-10"
          >
            <svg
              class="sc-ui-icon emotion-11 emotion-12"
              viewBox="0 0 24 24"
            >
              <path
                d="M10,2H14L13.21,9.91L19.66,5.27L21.66,8.73L14.42,12L21.66,15.27L19.66,18.73L13.21,14.09L14,22H10L10.79,14.09L4.34,18.73L2.34,15.27L9.58,12L2.34,8.73L4.34,5.27L10.79,9.91L10,2Z"
              />
            </svg>
            <hr
              class="emotion-13 emotion-14"
            />
            <svg
              class="sc-ui-icon emotion-11 emotion-16"
              viewBox="0 0 24 24"
            >
              <path
                d="M9,10H7V12H9V10M13,10H11V12H13V10M17,10H15V12H17V10M19,3H18V1H16V3H8V1H6V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5A2,2 0 0,0 19,3M19,19H5V8H19V19Z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DateInput renders correctly with default props 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 100%;
}

.emotion-0 div.react-datepicker-wrapper {
  display: block;
}

.emotion-0 div.react-datepicker__input-container {
  display: block;
}

.emotion-0 div.react-datepicker__triangle {
  display: none;
}

.emotion-0 div.react-datepicker__month-container {
  padding: 16px;
}

.emotion-0 .react-datepicker-popper {
  z-index: 1000;
}

.emotion-0 .calendar {
  font-family: 'Asap';
  border-color: #dce1eb;
}

.emotion-0 .calendar .react-datepicker__header {
  color: #4a4f62;
  background-color: #fff;
  border-bottom: none;
  text-align: inherit;
  display: block;
  padding-top: 0;
  position: inherit;
}

.emotion-0 .calendar .react-datepicker__triangle {
  border-bottom-color: #fff;
}

.emotion-0 .calendar .react-datepicker__month {
  margin: 0;
}

.emotion-0 .calendar .react-datepicker__day-names {
  margin-top: 8px;
}

.emotion-0 .calendar .react-datepicker__day-name {
  font-family: 'Asap';
  color: #4a4f62;
  font-weight: 500;
  font-size: 14px;
  line-height: 24px;
  text-align: center;
  margin: 3px;
}

.emotion-0 .calendar .react-datepicker__day {
  color: #b2b6c3;
  font-size: 16px;
  width: 1.7rem;
  height: 1.7rem;
  margin-left: 3px;
  margin-right: 3px;
}

.emotion-0 .calendar .react-datepicker__day--selected {
  color: #eeeeff;
  background-color: #4f0599;
  border-radius: 50%;
}

.emotion-0 .calendar .react-datepicker__day--keyboard-selected {
  color: #4f0599;
  background-color: #eeeeff;
  border-radius: 50%;
}

.emotion-0 .calendar .react-datepicker__day:hover {
  color: #4f0599;
  border-radius: 50%;
  background-color: #eeeeff;
}

.emotion-0 .calendar .react-datepicker__day--disabled {
  color: #eeeeff;
}

.emotion-0 .calendar .react-datepicker__day--disabled:hover {
  color: #eeeeff;
  background-color: transparent;
}

.emotion-3.emotion-3 {
  position: relative;
}

.emotion-4 {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
}

.emotion-4::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-4::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-4:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-4::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-4:hover,
.emotion-4:focus {
  border-color: #dbdbdf;
}

.emotion-4:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.emotion-4::-webkit-input-placeholder {
  opacity: 1;
}

.emotion-4::-moz-placeholder {
  opacity: 1;
}

.emotion-4:-ms-input-placeholder {
  opacity: 1;
}

.emotion-4::placeholder {
  opacity: 1;
}

.emotion-6 {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
  -webkit-transform: translate(-9.6%, -3px) scale(0.8);
  -moz-transform: translate(-9.6%, -3px) scale(0.8);
  -ms-transform: translate(-9.6%, -3px) scale(0.8);
  transform: translate(-9.6%, -3px) scale(0.8);
}

.emotion-8 {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.emotion-8.emotion-8 {
  overflow: hidden;
}

.emotion-9.emotion-9 {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

.emotion-10.emotion-10 {
  height: 48px;
  padding: 8px;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  right: 0;
  top: 0;
}

.emotion-12 {
  margin: 0;
  border: 0;
  width: 1px;
  height: auto;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #eeeeff;
}

.emotion-12.emotion-12 {
  height: 100%;
  margin-right: 8px;
  margin-left: 8px;
}

.emotion-14 {
  fill: gray;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.emotion-14.emotion-14 {
  vertical-align: middle;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      class="react-datepicker-wrapper"
    >
      <div
        class="react-datepicker__input-container"
      >
        <div
          class=""
          name="test"
          value="12/17/1995"
        >
          <div
            class="emotion-2"
          >
            <div
              class="emotion-3"
            >
              <input
                autocomplete="on"
                class="emotion-4 emotion-5"
                type="text"
                value="1995-12-17T03:24:00.000Z"
              />
              <label
                aria-live="assertive"
                class="emotion-6 emotion-7"
              >
                Date
              </label>
            </div>
            <div
              class="emotion-8"
            >
              <div
                class="emotion-9"
              />
            </div>
          </div>
          <div
            class="emotion-10"
          >
            <hr
              class="emotion-11 emotion-12"
            />
            <svg
              class="sc-ui-icon emotion-13 emotion-14"
              viewBox="0 0 24 24"
            >
              <path
                d="M9,10H7V12H9V10M13,10H11V12H13V10M17,10H15V12H17V10M19,3H18V1H16V3H8V1H6V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5A2,2 0 0,0 19,3M19,19H5V8H19V19Z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
